Fixed navbar on mobile

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -106,13 +106,6 @@ a.button:hover {
   text-decoration: underline;
 }
 
-/* Small devices (portrait tablets and large phones, 800px and below) */
-@media only screen and (max-width: 800px) {
-  .navbar {
-    padding: 5px 5px;
-    background-color: #333
-  }
-}
 
 
 
